Feautured jobs Section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <img src="./images/header/logogroup.png" alt="logogroup" />
+        <img src="./images/header/logoGroup.png" alt="logogroup" />
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link" href="">Home</a></li>
@@ -40,7 +40,7 @@
               class="search-input"
             />
             <div class="search-box">
-              <img src="./images/svg/search-icon.svg" alt="search-icon" />
+              <img src="./images/svg/search.svg" alt="search-icon" />
             </div>
           </a>
           <div class="auth">
@@ -124,82 +124,206 @@
           <p class="how__works-text">How it works</p>
           <div class="how__works-box">
             <div class="works__box">
-              <h2 class="works__title">Start find a job you love with us easily</h2>
+              <h2 class="works__title">
+                Start find a job you love with us easily
+              </h2>
               <ul class="works__list">
                 <li class="works__item">
-                  <div class="works__item-box">            
+                  <div class="works__item-box">
                     <div class="works__number one">1</div>
-                    <h3 class="works__item-title">Complete Profile</h3></div>
-                  <img src="./images/svg/open.svg" alt="">
-                </li">
-                <li class="works__item open" >
-                  <div class="works__item-box">
-                  <div class="works__item-box">
-                    <div class="works__number two">2</div>
-                  <h3 class="works__item-title">Search Vacancies</h3>
+                    <h3 class="works__item-title">Complete Profile</h3>
                   </div>
-                  <img src="./images/svg/close.svg" alt="">
+                  <img src="./images/svg/open.svg" alt="" />
+                </li>
+                <li class="works__item open">
+                  <div class="works__item-box">
+                    <div class="works__item-box">
+                      <div class="works__number two">2</div>
+                      <h3 class="works__item-title">Search Vacancies</h3>
+                    </div>
+                    <img src="./images/svg/close.svg" alt="" />
                   </div>
-                  <div class="open-text" >
-                  <p class="works__item-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-                  </p>
+                  <div class="open-text">
+                    <p class="works__item-text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud
+                      exercitation.
+                    </p>
                   </div>
                 </li>
                 <li class="works__item">
                   <div class="works__item-box">
-                  <div class="works__number three">3</div>
-                  <h3 class="works__item-title">Apply Job</h3>
+                    <div class="works__number three">3</div>
+                    <h3 class="works__item-title">Apply Job</h3>
                   </div>
-                  <img src="./images/svg/open.svg" alt="">
-
+                  <img src="./images/svg/open.svg" alt="" />
                 </li>
               </ul>
             </div>
             <div class="works__img">
-              <img width="635" height="433" src="./images/how-works/How-works.png" alt="hero" />
+              <img
+                width="635"
+                height="433"
+                src="./images/howWorks/howWorks.png"
+                alt="hero"
+              />
             </div>
           </div>
         </div>
       </section>
       <section class="why">
-        <div class="container ">
+        <div class="container">
           <div class="why-container">
             <h2 class="why-title">Why Choose Us</h2>
-          <div class="why-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+            <div class="why-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </div>
           </div>
           <ul class="why-list">
             <li class="why-item">
               <div class="why-svg svg-one">
-                <img src="./images/svg/why.svg" alt="">
+                <img src="./images/svg/why.svg" alt="" />
               </div>
               <h3>Trusted</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna.
+              </p>
             </li>
             <li class="why-item">
               <div class="why-svg svg-two">
-                <img src="./images/svg/why.svg" alt="">
+                <img src="./images/svg/why.svg" alt="" />
               </div>
               <h3>Easy to Use</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna.
+              </p>
             </li>
             <li class="why-item">
               <div class="why-svg svg-three">
-                <img src="./images/svg/why.svg" alt="">
+                <img src="./images/svg/why.svg" alt="" />
               </div>
               <h3>Faster</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna.
+              </p>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="feautured">
+        <div class="container">
+          <div class="feautured-container">
+            <h2 class="feautured-title">Featured Jobs</h2>
+            <p class="feautured-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+          <ul class="feautured-list">
+            <li class="feautured-item">
+              <img
+                class="feautured-employers"
+                src="./images/feautured/employer1.png"
+                alt="empoyer"
+              />
+              <h3 class="feautured-position">Database Programmer</h3>
+              <p class="feautured-team">Marraz Team</p>
+              <p class="feautured-salary">
+                $14,000 - $25,000 <span class="monthly">/monthly</span>
+              </p>
+              <p class="feautured-spot">
+                London,Enlend <span class="map">View map</span>
+              </p>
+              <div class="feautured-buttons">
+                <div class="feautured-buttons-like">
+                  <svg
+                    width="24"
+                    height="22"
+                    viewBox="0 0 24 22"
+                    fill="black"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.6996 1.83963C-0.567639 4.29254 -0.565429 8.23975 1.6996 10.6948L11.7332 21.5754C15.0816 17.9528 18.4302 14.33 21.7788 10.7072C24.046 8.25431 24.046 4.30483 21.7788 1.85209C19.5115 -0.600819 15.8608 -0.601046 13.5939 1.85209L11.7452 3.85219L9.88498 1.83968C7.61774 -0.613227 3.96701 -0.613227 1.70011 1.83968L1.6996 1.83963Z"
+                    />
+                  </svg>
+                </div>
+                <button class="feautured-buttons-apply">Apply Now</button>
+              </div>
+            </li>
+            <li class="feautured-item">
+              <img
+                class="feautured-employers"
+                src="./images/feautured/employer2.png"
+                alt="empoyer"
+              />
+              <h3 class="feautured-position">Database Programmer</h3>
+              <p class="feautured-team">Marraz Team</p>
+              <p class="feautured-salary">
+                $14,000 - $25,000 <span class="monthly">/monthly</span>
+              </p>
+              <p class="feautured-spot">
+                London,Enlend <span class="map">View map</span>
+              </p>
+              <div class="feautured-buttons">
+                <div class="feautured-buttons-like">
+                  <svg
+                    width="24"
+                    height="22"
+                    viewBox="0 0 24 22"
+                    fill="black"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.6996 1.83963C-0.567639 4.29254 -0.565429 8.23975 1.6996 10.6948L11.7332 21.5754C15.0816 17.9528 18.4302 14.33 21.7788 10.7072C24.046 8.25431 24.046 4.30483 21.7788 1.85209C19.5115 -0.600819 15.8608 -0.601046 13.5939 1.85209L11.7452 3.85219L9.88498 1.83968C7.61774 -0.613227 3.96701 -0.613227 1.70011 1.83968L1.6996 1.83963Z"
+                    />
+                  </svg>
+                </div>
+                <button class="feautured-buttons-apply">Apply Now</button>
+              </div>
+            </li>
+            <li class="feautured-item">
+              <img
+                class="feautured-employers"
+                src="./images/feautured/employer1.png"
+                alt="empoyer"
+              />
+              <h3 class="feautured-position">Database Programmer</h3>
+              <p class="feautured-team">Marraz Team</p>
+              <p class="feautured-salary">
+                $14,000 - $25,000 <span class="monthly">/monthly</span>
+              </p>
+              <p class="feautured-spot">
+                London,Enlend <span class="map">View map</span>
+              </p>
+              <div class="feautured-buttons">
+                <div class="feautured-buttons-like">
+                  <svg
+                    width="24"
+                    height="22"
+                    viewBox="0 0 24 22"
+                    fill="black"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.6996 1.83963C-0.567639 4.29254 -0.565429 8.23975 1.6996 10.6948L11.7332 21.5754C15.0816 17.9528 18.4302 14.33 21.7788 10.7072C24.046 8.25431 24.046 4.30483 21.7788 1.85209C19.5115 -0.600819 15.8608 -0.601046 13.5939 1.85209L11.7452 3.85219L9.88498 1.83968C7.61774 -0.613227 3.96701 -0.613227 1.70011 1.83968L1.6996 1.83963Z"
+                    />
+                  </svg>
+                </div>
+                <button class="feautured-buttons-apply">Apply Now</button>
+              </div>
+            </li>
+          </ul>
+          <div class="feautured-view">
+            <button class="feautured-buttons-view">View More</button>
+          </div>
         </div>
       </section>
     </main>
