Mobile adaptive vesion

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <a class="nav__link" href="">Sing Up</a>
           </div>
         </nav>
+        <img class="burger" src="./images/svg/burger.svg" alt="burgermenu" />
       </div>
     </header>
     <main>
@@ -96,43 +97,55 @@
         </div>
       </section>
       <section class="partners">
-        <div class="container partners__container">
-          <img
-            class="partners__img1"
-            src="./images/partners/partner1.svg"
-            alt="partners__img1"
-          />
-          <img
-            class="partners__img2"
-            src="./images/partners/partner2.svg
-            "
-            alt="partners__img2"
-          />
-          <img
-            class="partners__img3"
-            src="./images/partners/partner3.svg
-            "
-            alt="partners__img3"
-          />
-          <img
-            class="partners__img4"
-            src="./images/partners/partner4.svg
-            "
-            alt="partners__img4"
-          />
-          <img
-            class="partners__img5"
-            src="./images/partners/partner5.svg
-            "
-            alt="partners__img5"
-          />
-          <img
-            class="partners__img6"
-            src="./images/partners/partner6.svg
-            "
-            alt="partners__img6"
-          />
-        </div>
+        <ul class="container partners__container">
+          <li>
+            <img
+              class="partners__img1"
+              src="./images/partners/partner1.svg"
+              alt="partners__img1"
+            />
+          </li>
+          <li>
+            <img
+              class="partners__img2"
+              src="./images/partners/partner2.svg
+              "
+              alt="partners__img2"
+            />
+          </li>
+          <li>
+            <img
+              class="partners__img3"
+              src="./images/partners/partner3.svg
+              "
+              alt="partners__img3"
+            />
+          </li>
+          <li>
+            <img
+              class="partners__img4"
+              src="./images/partners/partner4.svg
+              "
+              alt="partners__img4"
+            />
+          </li>
+          <li>
+            <img
+              class="partners__img5"
+              src="./images/partners/partner5.svg
+              "
+              alt="partners__img5"
+            />
+          </li>
+          <li>
+            <img
+              class="partners__img6"
+              src="./images/partners/partner6.svg
+              "
+              alt="partners__img6"
+            />
+          </li>
+        </ul>
       </section>
       <section class="how__works">
         <div class="container how__works-container">
@@ -191,11 +204,11 @@
         <div class="container">
           <div class="why-container">
             <h2 class="why-title">Why Choose Us</h2>
-            <div class="why-text">
+            <p class="why-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam.
-            </div>
+            </p>
           </div>
           <ul class="why-list">
             <li class="why-item">
@@ -422,17 +435,14 @@
               <span>36,789</span>
               <p>Talented Freelancer</p>
             </li>
-            <li class="customers-item"></li>
             <li class="customers-item">
               <span>45,973</span>
               <p>Visitors</p>
             </li>
-            <li class="customers-item"></li>
             <li class="customers-item">
               <span>56,461</span>
               <p>Contract Made</p>
             </li>
-            <li class="customers-item"></li>
             <li class="customers-item">
               <span>852k</span>
               <p>Companies</p>
